contrast fix

--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -76,7 +76,6 @@ table{
 }
 table th{
 	background-color: #1da6d3;
-	color:#eaf6ff;
 }
 table td{
 	background-color: #d9e9f4;
